midterm final commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
+<!--Al-ameen Idowu-salami 8862767-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="normalize" type="text/css" href="css/normalize.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="structural">
+        <h1>My Dog</h1>
+    </header>
+    <main class="structural">
+        <figure class="figure1">
+            <img src="images/dog1.jpg" alt="First Dog" id="dogs">
+            <figcaption>First Dog</figcaption>
+        </figure>
+        <figure class="figure2">
+            <img src="images/dog-group.webp" alt="Dog group" id="dogs">
+            <figcaption>Dog group</figcaption>
+        </figure>
+        <section>
+            <h2>More Information</h2>
+            <ul>
+                <li><a href="https://www.akc.org/dog-breeds/"> Dog breed</a></li>
+                <li><a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"> Cutest Dogs</a></li>
+            </ul>
+        </section>
+    </main>
 </body>
+<footer class="structural">
+    <p>&copy; Al-ameen Idowu-salami. 2023</p>
+</footer>
 </html>
