midterm final commit

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section>
             <h2>More Information</h2>
             <ul>
-                <li><a href="https://www.akc.org/dog-breeds/"> Dog breed</a></li>
-                <li><a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"> Cutest Dogs</a></li>
+                <li><a href="https://www.akc.org/dog-breeds/" target="_blank"> Dog breed</a></li>
+                <li><a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/" target="_blank"> Cutest Dogs</a></li>
             </ul>
         </section>
     </main>
